--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
     "concurrently": "^9.2.0",
+    "i18next": "^25.3.6",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^15.6.1",
     "react-router": "^7.8.0",
     "sass": "^1.90.0",
     "tailwindcss": "^4.1.12"
