--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.1.1",
     "react-i18next": "^15.6.1",
     "react-router": "^7.8.0",
+    "react-slideshow-image": "^4.3.2",
     "sass": "^1.90.0",
     "tailwindcss": "^4.1.12"
   },
